# projet-conversion-rate-bloc3

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebook/: 01_data_exploration_eda.ipynb  02_feature_engineering.ipynb  03_training_tuning.ipynb  04_submission_inference.ipynb  05_interpretation_recommendation.ipynb  Conversion_rate_challenge copy.ipynb  Conversion_rate_challenge.ipynb  conversion_rate_challenge.ipynb
outputs/data/: conversion_data_test_predictions_Raphael-model1.csv   conversion_data_test_predictions_Raphael-model2.csv   conversion_data_test_predictions_Raphael-model3.csv
outputs/models/: best_model.pkl  conversion_rate_xgboost.pkl  logreg_baseline.pkl  preprocessor.pkl
outputs/processed/: X_test.npy  X_val.npy  y_train.csv  y_val.csv  y_val_proba_best.npy
